# req2task

./: .gitattributes  .gitignore  .impeccable.md  .npmrc  AGENTS.md  CHECKLIST-PREVIEW-v1.md  SPEC-PREVIEW-v1.md  TASKS-PREVIEW-v1.md  docker-compose.dev.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.agents/rules/: bug-fix-rules.md  dev-rules.md  dto-rules.md  e2e-test-rules.md
.github/: copilot-instructions.md
.trae/documents/: axios拦截器返回data优化.md  create-agentsmd-plan.md  login-register-plan.md  question-and-answer-refactor.md  前端测试方案.md
apps/service/: .env.example  .eslintrc.cjs  AGENTS.md  debug-entities.ts  package.json  test-migrations.ts  tsconfig.json
apps/web/: .eslintrc.cjs  AGENTS.md  DESIGN-RULES.md  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
docker-developer/: Dockerfile  docker-compose.yml  package.json
docker-developer/src/: config.ts  env.ts  git.ts  index.ts  ssh.ts  task.ts  types.ts  websocket.ts
docs/: DOCS_MANAGEMENT.md  README.md  agents.md
docs/ai-chat/: 需求变更对话.md
req2task-runner/: Cargo.toml  README.md  config.yaml
req2task-runner/src/: config.rs  docker.rs  main.rs  port.rs  runner.rs  types.rs
req2task-runner/src/docker/: manager.rs
req2task-runner/src/runner/: registry.rs
req2task-runner/src/websocket/: client.rs
scripts/: check-env.ts  db-reset.ts  dev-service.ts  dev-web.ts  migration-generate.ts  migration-revert.ts  migration-run.ts  migration-show.ts  tsconfig.json
(+487 files in other folders)
